# qgp

./: .gitignore  CMakeLists.txt  README.md  SDK_INDEPENDENCE_PLAN.md  WINDOWS_BUILD_INSTRUCTIONS.md  aes_keywrap.c  aes_keywrap.h  armor.c  bip39.c  bip39_pbkdf2.c  build_windows.bat  config.c  decrypt.c  encrypt.c  export.c  fix_packed.sh  keygen.c  keyring.c  kyber_deterministic.c  kyber_deterministic.h  main.c  qgp.h  qgp_aes.c  qgp_aes.h  qgp_compiler.h  qgp_dilithium.c  qgp_dilithium.h  qgp_key.c  qgp_kyber.h  qgp_platform.h  qgp_platform_linux.c  qgp_platform_windows.c  qgp_random.c  qgp_random.h  qgp_signature.c  qgp_types.h  qgp_utils_standalone.c  seed_derivation.c  sign.c  utils.c  (+1 more)
crypto/dilithium/: CMakeLists.txt  randombytes.h
crypto/kyber512/: CMakeLists.txt
qgp-c/: CMakeLists.txt  README.md  aes_keywrap.c  aes_keywrap.h  armor.c  bip39.c  bip39.h  bip39_pbkdf2.c  bip39_wordlist.h  convert_wordlist.sh  decrypt.c  encrypt.c  export.c  keygen.c  keyring.c  kyber_deterministic.c  main.c  privkey.c  qgp.h  qgp_aes.c  qgp_aes.h  qgp_dilithium.h  qgp_kyber.c  qgp_signature.c  qgp_types.h  qgp_utils_standalone.c  seed_derivation.c  sign.c  utils.c  verify.c
qgp-c/crypto/dilithium/: config.h
qgp-c/crypto/kyber512/: indcpa.c  kem.c
test_corpus/: README.md  test_document.txt
test_corpus/metadata/: checksums.txt
win32/: dirent.c  dirent.h  getopt.c  getopt.h
